--- a/index.html
+++ b/index.html
@@ -5,122 +5,139 @@
     <title></title>
   </head>
   <body>
+    <!-- Desktop navigation bar -->
     <div class="nav--desktop">
+      <!-- Rebecca Atwood logo on desktop navigation bar -->
       <div class="mobile-wrapper">
         <div class="header-cart__wrapper hidden-lg">
-<!-- <i> tag not recognized, line 12 -->
+          <!-- <i> tag introduced, possible italics -->
           <a href="/cart" class="CartToggle header-cart"><i class="icon icon-ra_bag"></i></a>
           <span class="header-cart__bubble cartCount has-items cartCount-updater  hidden-count">0</span>
         </div>
         <div class="logo-wrapper ">
             <h1 class="h4 header-logo" itemscope="" itemtype="http://schema.org/Organization">
-<!-- <i> tag not recognized, line 18 -->
+              <!-- <i> tag introduced, possible italics -->
               <a href="/" itemprop="url"><i class="icon icon-ra_primary-logo"></i></a>
             </h1>
         </div>
         <a href="" class="menuToggle header-hamburger"></a>
       </div>
-    <div class="header-menu nav-wrapper">
-      <ul class="main-menu accessibleNav">
-        <li class="grandparent  kids-4">
-          <a href="#" class="nav-link" id="Shop">Shop</a>
-          <a href="#" class="nav-carat"><span class="plus">+</span><span class="minus">-</span></a>
-          <div class="main-menu-dropdown">
-            <ul class="main-menu-dropdown--list">
-              <li aria-haspopup="true">
-                <ul class="collection-nav--child">
-                  <li class="collection-nav--child-link"><h5><a href="/collections/all">All Collections</a></h5>
-                  </li>
-                  <li class="collection-nav--child-link"><h5><a href="/collections/new-arrivals">New Arrivals</a></h5>
-                  </li>
-                  <li class="collection-nav--child-link"><h5><a href="/collections/bedding">Bedding</a></h5>
-                    <ul class="collection-nav--grandchild">
-                      <li class="collection-nav--grandchild-link"><a href="/collections/duvets">Duvets</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/quilts">Coverlets + Quilts</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/pillowcases">Pillowcases</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/sets">Bedding Sets</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/throw-blankets">Throws</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/headboard-pillows">Headboard Pillows</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li aria-haspopup="true">
-                <ul class="collection-nav--child">
-                  <li class="collection-nav--child-link"><h5><a href="/collections/fabric-by-the-yard">Fabric</a></h5>
-                    <ul class="collection-nav--grandchild">
-                      <li class="collection-nav--grandchild-link"><a href="/collections/fabric-by-the-yard/Printed">Printed</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/fabric-by-the-yard/Woven">Woven</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/embroidered-fabrics">Embroidered</a></li>
-                      <li class="collection-nav--grandchild-link"><a href="/collections/swatch-sets">Swatches</a></li>
-                    </ul>
-                  </li>
-                  <li class="collection-nav--child-link"><h5><a href="/collections/table-linens">Dining</a></h5>
-                    <ul class="collection-nav--grandchild">
-                      <li class="collection-nav--grandchild-link"><a href="/collections/table-linens">Table Linens</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li aria-haspopup="true">
+      <!-- Desktop navigation menu items -->
+      <div class="header-menu nav-wrapper">
+        <ul class="main-menu accessibleNav">
+          <!-- First navigation menu item: Shop -->
+          <li class="grandparent  kids-4">
+            <a href="#" class="nav-link" id="Shop">Shop</a>
+            <a href="#" class="nav-carat"><span class="plus">+</span><span class="minus">-</span></a>
+            <!-- Shop menu dropdown list -->
+            <div class="main-menu-dropdown">
+              <ul class="main-menu-dropdown--list">
+                <li aria-haspopup="true">
                   <ul class="collection-nav--child">
-                    <li class="collection-nav--child-link"><h5><a href="/collections/wallpapers">Wallpaper</a></h5>
+                    <li class="collection-nav--child-link"><h5><a href="/collections/all">All Collections</a></h5>
                     </li>
-                    <li class="collection-nav--child-link"><h5><a href="/collections/accessories-gift">Accessories + Gifts</a></h5>
+                    <li class="collection-nav--child-link"><h5><a href="/collections/new-arrivals">New Arrivals</a></h5>
+                    </li>
+                    <!-- Bedding submenu list -->
+                    <li class="collection-nav--child-link"><h5><a href="/collections/bedding">Bedding</a></h5>
                       <ul class="collection-nav--grandchild">
-                          <li class="collection-nav--grandchild-link"><a href="/products/signed-copy-of-rebecca-atwoods-living-with-pattern">Book</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/products/gift-card">Gift Card</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/collections/zip-pouches">Zip Pouches</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="http://rebeccaatwood.com/apps/giftregistry">Gift Registry</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/duvets">Duvets</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/quilts">Coverlets + Quilts</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/pillowcases">Pillowcases</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/sets">Bedding Sets</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/throw-blankets">Throws</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/headboard-pillows">Headboard Pillows</a></li>
                       </ul>
                     </li>
                   </ul>
-              </li>
-              <li aria-haspopup="true">
+                </li>
+                <li aria-haspopup="true">
                   <ul class="collection-nav--child">
-                    <li class="collection-nav--child-link"><h5><a href="/collections/pillows">Pillows</a></h5>
+                    <!-- Fabric submenu list -->
+                    <li class="collection-nav--child-link"><h5><a href="/collections/fabric-by-the-yard">Fabric</a></h5>
                       <ul class="collection-nav--grandchild">
-                          <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Hand-Dyed">Hand Dyed</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Printed">Printed</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Woven">Woven</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/collections/embroidered-pillows/Hand-Embroidered">Embroidered</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/collections/pillow-sets">Pillow Sets</a></li>
-                          <li class="collection-nav--grandchild-link"><a href="/products/custom-pillow">Custom</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/fabric-by-the-yard/Printed">Printed</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/fabric-by-the-yard/Woven">Woven</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/embroidered-fabrics">Embroidered</a></li>
+                        <li class="collection-nav--grandchild-link"><a href="/collections/swatch-sets">Swatches</a></li>
                       </ul>
                     </li>
-                    <li class="collection-nav--child-link"><h5><a href="https://rebeccaatwood.com/collections/sale">Sale</a></h5>
+                    <!-- Dining submenu list -->
+                    <li class="collection-nav--child-link"><h5><a href="/collections/table-linens">Dining</a></h5>
+                      <ul class="collection-nav--grandchild">
+                        <li class="collection-nav--grandchild-link"><a href="/collections/table-linens">Table Linens</a></li>
+                      </ul>
                     </li>
                   </ul>
-              </li>
-            </ul>
-          </div>
-        </li>
-        <li class="child  kids-0">
-          <a href="/pages/about-us" class="nav-link" id="About">About</a>
-        </li>
-        <li class="child  kids-0">
-          <a href="/pages/process" class="nav-link" id="Process">Process</a>
-        </li>
-        <li class="child  kids-0">
-          <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
-        </li>
-        <li class="child  kids-0">
-          <a href="/pages/book" class="nav-link" id="Book">Book</a>
-        </li>
-        <li class="child  kids-0">
-          <a href="/pages/visit-us" class="nav-link" id="Showroom">Showroom</a>
-        </li>
-        <li class="child  kids-0">
-          <a href="/pages/contact" class="nav-link" id="Contact">Contact</a>
-        </li>
-        <li class="cart-text-link">
-          <a href="/cart" class="CartToggle">
-            Bag
-            <span class=" hidden-count " id="nav-cartCountDesktop">(0)</span>
-          </a>
-        </li>
-      </ul>
-    </div>
+                </li>
+                <li aria-haspopup="true">
+                    <ul class="collection-nav--child">
+                      <li class="collection-nav--child-link"><h5><a href="/collections/wallpapers">Wallpaper</a></h5>
+                      </li>
+                      <!-- Accessories + Gifts submenu list -->
+                      <li class="collection-nav--child-link"><h5><a href="/collections/accessories-gift">Accessories + Gifts</a></h5>
+                        <ul class="collection-nav--grandchild">
+                            <li class="collection-nav--grandchild-link"><a href="/products/signed-copy-of-rebecca-atwoods-living-with-pattern">Book</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/products/gift-card">Gift Card</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/collections/zip-pouches">Zip Pouches</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="http://rebeccaatwood.com/apps/giftregistry">Gift Registry</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                </li>
+                <li aria-haspopup="true">
+                    <ul class="collection-nav--child">
+                      <!-- Pillows submenu list -->
+                      <li class="collection-nav--child-link"><h5><a href="/collections/pillows">Pillows</a></h5>
+                        <ul class="collection-nav--grandchild">
+                            <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Hand-Dyed">Hand Dyed</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Printed">Printed</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/collections/pillows/Woven">Woven</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/collections/embroidered-pillows/Hand-Embroidered">Embroidered</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/collections/pillow-sets">Pillow Sets</a></li>
+                            <li class="collection-nav--grandchild-link"><a href="/products/custom-pillow">Custom</a></li>
+                        </ul>
+                      </li>
+                      <li class="collection-nav--child-link"><h5><a href="https://rebeccaatwood.com/collections/sale">Sale</a></h5>
+                      </li>
+                    </ul>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <!-- Second navigation menu item: About -->
+          <li class="child  kids-0">
+            <a href="/pages/about-us" class="nav-link" id="About">About</a>
+          </li>
+          <!-- Third navigation menu item: Process -->
+          <li class="child  kids-0">
+            <a href="/pages/process" class="nav-link" id="Process">Process</a>
+          </li>
+          <!-- Fourth navigation menu item: Blog -->
+          <li class="child  kids-0">
+            <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
+          </li>
+          <!-- Fifth navigation menu item: Book -->
+          <li class="child  kids-0">
+            <a href="/pages/book" class="nav-link" id="Book">Book</a>
+          </li>
+          <!-- Fifth navigation menu item: Showroom -->
+          <li class="child  kids-0">
+            <a href="/pages/visit-us" class="nav-link" id="Showroom">Showroom</a>
+          </li>
+          <!-- Sixth navigation menu item: Contact -->
+          <li class="child  kids-0">
+            <a href="/pages/contact" class="nav-link" id="Contact">Contact</a>
+          </li>
+          <!-- Seventh navigation menu item: Bag -->
+          <li class="cart-text-link">
+            <a href="/cart" class="CartToggle">
+              Bag
+              <span class=" hidden-count " id="nav-cartCountDesktop">(0)</span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
